--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mega-solar",
   "version": "1.0.0",
   "main": "app/index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "nodemon --exec node app/index.js"
   },
@@ -15,7 +15,8 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.15.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
